--- a/index.html
+++ b/index.html
@@ -2,48 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>18+ Private Access</title>
+  <title>Adults Only</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
-      background: #000;
+      background-color: #000;
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px 20px;
+      padding: 60px 20px;
     }
+
     h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
+      font-size: 34px;
+      margin-bottom: 15px;
     }
+
     p {
       font-size: 18px;
       opacity: 0.85;
+      line-height: 1.5;
     }
+
     .btn {
       display: inline-block;
-      margin-top: 30px;
-      padding: 15px 30px;
-      background: red;
-      color: white;
+      margin-top: 35px;
+      padding: 16px 40px;
+      background-color: #ff0000;
+      color: #fff;
       text-decoration: none;
-      font-size: 20px;
-      border-radius: 5px;
+      font-size: 22px;
+      border-radius: 6px;
+      font-weight: bold;
     }
+
+    .btn:hover {
+      background-color: #cc0000;
+    }
+
     .warning {
+      margin-top: 50px;
       font-size: 14px;
       opacity: 0.6;
-      margin-top: 40px;
     }
   </style>
 </head>
+
 <body>
 
-  <h1>🔞 Adults Only</h1>
-  <p>Private chats • Real connections<br>No credit card required</p>
+  <p style="font-size:14px; opacity:0.6;">
+    By entering you confirm that you are 18+ years old
+  </p>
 
-  <!-- REPLACE THIS LINK -->
-  <a class="btn" href="YOUR_AFFILIATE_LINK_HERE">Enter Now</a>
+  <h1>🔞 Adults Only</h1>
+
+  <p>
+    Private chats • Real connections<br>
+    No credit card required
+  </p>
+
+  <!-- 🔴 CHANGE THIS LINK ONLY -->
+  <a class="btn" href="https://google.com">Enter Now</a>
 
   <div class="warning">
     You must be 18+ to continue. All models are verified adults.
